增加压缩版简历，重构文件命名

--- a/resume_full.tex
+++ b/resume_full.tex
@@ -36,11 +36,13 @@
 \section{专业技能}
 \begin{normalsize}
   \begin{itemize}
-    \input{db}
-    \input{java}
-    \input{behind}
+    \input{java_mini}
     \input{go_mini}
     \input{node_mini}
+    \input{python_mini}
+    \input{behind}
+    \input{db}
+    \input{websocket}
     \input{common}
     
   \end{itemize}
@@ -54,6 +56,8 @@
 \input{java_proj} % 引入Java项目经历文件
 
 \input{go_proj} % 引入Go项目经历文件
+
+\input{python_proj} % 引入Python项目经历文件
 
 \input{awards} % 引入荣誉奖项文件
 
